--- a/static/js/testing/index.html
+++ b/static/js/testing/index.html
@@ -10,6 +10,6 @@
     <h1>Jest Click Test</h1>
     <button onclick="buttonClick()">Click Me</button>
     <p id="par"></p>
-    <script src="scripts/button.js"></script>
+    <script src="static/js/testing/button.js"></script>
 </body>
 </html>
